2005-08-31	Benedikt Meurer <benny@xfce.org>

	* po/es.po: Update spanish translations, thanks to Patricio Carr
	  <pato@patocarr.com>.

2005-08-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-bar.c, exo/exo-icon-view.c: Use alloca wrappers
	  provided by GLib.

2005-08-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_expose_event): No need to setup
	  the clipping for the fill GC, as we'll only draw within the clip
	  region anyways.

2005-08-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Allocate the GCs required for drawing the
	  rubberband selection when the rubberbanding starts and deallocate
	  them when rubberbanding is done, instead of allocating them for
	  every expose_event handler invokation.

2005-08-25	Benedikt Meurer <benny@xfce.org>

	* exo/exo-private.{c,h}: Drop the MIME info parser.
	* docs/reference/tmpl/*.sgml: Regenerate the API documentation
	  templates.
	* docs/reference/exo-docs.sgml: Don't list libxfcegui4 as dependency
	  any longer.

2005-08-22	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Disable Gtk+ DnD callbacks when starting a
	  rubberband selection and re-enable them afterwards.
	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Cancel cell
	  editing when clicking on an empty area.

2005-08-19	Benedikt Meurer <benny@xfce.org>

	* python/Makefile.am: Fix indentation.
	* configure.in.in: Enable debugging by default when building from a
	  SVN sandbox. Disable debugging by default when building a release.
	* TODO: Remove obsolete items.
	* HACKING: Fix repository URLs and file names.
	* NEWS: Collect atleast the most important changes.
	* po/: Run 'gmake update-po'.

2005-08-19	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump the libtool revision number.

2005-08-19	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-xsession-client.c: Drop dependency on X11.
	  Acts as a dummy on other GDK targets.