@@ -156,6 +156,8 @@ exo_icon_view_get_margin
 exo_icon_view_set_margin
 exo_icon_view_get_selection_mode
 exo_icon_view_set_selection_mode
+exo_icon_view_widget_to_icon_coords
+exo_icon_view_icon_to_widget_coords
 exo_icon_view_get_path_at_pos
 exo_icon_view_get_item_at_pos
 exo_icon_view_get_visible_range
